# pyproject-cookiecutter

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  cookiecutter.json  pyproject.toml  setup.cfg
.circleci/: config.yml
hooks/: post_gen_project.py  pre_gen_project.py
tests/integration/: test_bake_project.py
{{cookiecutter.project_slug}}/: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  setup.cfg
{{cookiecutter.project_slug}}/.circleci/: config.yml
