[tool.poetry]
name = "cookiecutter-pyproject"
version = "0.1.0"
description = "Poetry Python Project Cookicutter"
authors = ["Colt Chapin <colton.chapin@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.5"
cookiecutter = "^1.7.2"
pre-commit = "^2.10"

[tool.poetry.dev-dependencies]
flake8 = "*"
mypy = "*"
pytest = "*"
pytest-cookies = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
